@@ -1115,7 +1115,7 @@ slp_eval_frame_setup_with(PyFrameObject *f, int throwflag, PyObject *retval)
      * SETUP_WITH operation.
      * NOTE / XXX: see above.
      */
-    Py_XINCREF(f);	    /* fool the link optimizer */
+    Py_XINCREF(f);      /* fool the link optimizer */
     Py_XINCREF(retval); /* fool the link optimizer */
     r = slp_eval_frame_value(f, throwflag, retval);
     Py_XDECREF(retval);
@@ -1134,7 +1134,7 @@ slp_eval_frame_with_cleanup(PyFrameObject *f, int throwflag, PyObject *retval)
      * NOTE / XXX: see above.
      */
     Py_XINCREF(f);      /* fool the link optimizer */
-    Py_XINCREF(f);	    /* fool the link optimizer */
+    Py_XINCREF(f);      /* fool the link optimizer */
     r = slp_eval_frame_value(f, throwflag, retval);
     Py_XDECREF(f);
     Py_XDECREF(f);
@@ -1229,6 +1229,7 @@ slp_eval_frame_value(PyFrameObject *f, int throwflag, PyObject *retval)
 
     if (throwflag) { /* support for generator.throw() */
         why = WHY_EXCEPTION;
+        assert(retval == NULL);  /* to prevent reference leaks */
         goto on_error;
     }
 
@@ -1254,6 +1255,7 @@ slp_eval_frame_value(PyFrameObject *f, int throwflag, PyObject *retval)
             }
             else if (!PyErr_Occurred()) {
                 /* iterator ended normally */
+                assert(retval == NULL);  /* to prevent reference leaks */
                 retval = POP();
                 Py_DECREF(retval);
                 /* perform the delayed block jump */
@@ -1265,6 +1267,7 @@ slp_eval_frame_value(PyFrameObject *f, int throwflag, PyObject *retval)
                  * exception.
                  */
                 PyErr_Clear();
+                assert(retval == NULL);  /* to prevent reference leaks */
                 retval = POP();
                 Py_DECREF(retval);
                 JUMPBY(oparg);
